ITG Master Page Template: Re-implementation

--- a/FY19/Views/Shared/Widgets/BreadCrumbsView.cshtml
+++ b/FY19/Views/Shared/Widgets/BreadCrumbsView.cshtml
@@ -208,7 +208,7 @@
     }
 }
 
-<nav class="localnavigation sticky">
+<div class="breadcrumb">
     <ul class="@className" id="@id">
         @if (text1 != null)
         {
@@ -271,4 +271,4 @@
             </li>
         }
     </ul>
-</nav>
+</div>
